--- a/.funcignore
+++ b/.funcignore
@@ -5,3 +5,12 @@
 local.settings.json
 test
 tsconfig.json
+
+bin
+obj
+appsettings.json
+local.settings.json
+
+__blobstorage__
+__queuestorage__
+__azurite_db*__.json
