--- a/local.settings.json
+++ b/local.settings.json
@@ -1,8 +1,8 @@
 {
   "IsEncrypted": false,
   "Values": {
-    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "EventHubsConnection": "MemoryF",
+    "AzureWebJobsStorage": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=fakedemo;AccountKey=geageageageawgageageageageageaw==",
+    "EventHubsConnection": "Endpoint=sb://fakename.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=abcdegeageawgeageaw=",
     "FUNCTIONS_WORKER_RUNTIME": "node"
   }
 }
